--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "test": "jest",
     "clean": "rm -rf dist"
   },
-  "keywords": ["pastebin", "nodejs", "express"],
+  "keywords": [
+    "pastebin",
+    "nodejs",
+    "express"
+  ],
   "author": "Your Name",
   "license": "MIT",
   "devDependencies": {
@@ -30,7 +34,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nanoid": "^5.0.5",
+    "nanoid": "^3.3.6",
     "pg": "^8.11.3"
   }
 }
